[metadata]
name = hudpy
version = 0.1.0
author = Emmet Tam
author_email = emmet_tam@yahoo.com
description = A python interface to the US Department of Housing and Urban Development APIs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/etam4260/hudpy
project_urls =
    Bug Tracker = https://github.com/etam4260/hudpy/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GPL2
    Operating System :: OS Independent


[options]
package_dir=
    =src
packages=find:
install_requires =
   pandas
   datetime
   typing
   urllib3
python_requires = >= 2.6


[options.packages.find]
where = src